2005-10-06:
    * CherryPy-2.1.0-rc2 released
    * Bug in sessionfilter fixed

2005-09-15:
    * CherryPy-2.1.0-rc1 released

2005-09-14:
    * The new HTTP error mechanism has been completely rewritten (see tutorial
    10)
    
2005-09-10:
    * New session implementation. See the CherryPy book for docs (remi)
    * New server.maxRequestBodySize and maxRequestHeaderSize options.
    *   See the CherryPy book for docs (remi)

2005-09-04:
    * Generalized mechanism for handling HTTP errors
    * raising a HTTPStatusError will automatically send an appropriate error page
    * All errors in production mode will cause CP to respond with a http error

2005-08-17:
    * The session filter has been simplified, the mechanism for creating multiple sessions has been removed. However .. (mikerobi)
    * The session filter can placed inside a _cpFilterList to provide an alternative to the default session.            (mikerobi)
    
2005-08-09:
    * The config section [global] is now distinct from, and the parent of, [/]. (fumanchu)
    * cherrypy.request.path is now parsed and set before onStartResource filter methods are called. (fumanchu)
    * Absolute Request-URI's are now acceptable, and are converted to relative paths. (fumanchu)
    * A Request-URI of "*" now maps to the [global] config section, and to cherrypy.root._global. (fumanchu)

2005-07-12:
    * CherryPy-2.1.0-beta released. Check http://www.cherrypy.org/wiki/WhatsNewIn21 for instructions on how to upgrade from 2.0. (remi)

2005-07-09:
    * Request entities that are not form params now get stuck in cherrypy.request.body (as a temp file object). (fumanchu)
    * cherrypy.config.update can be called with an the keyword override=False to prevent values from being overwritten.
2005-07-06:
    * Added code-coverage tools. (fumanchu)

2005-06-25: